<resources>
    <string name="app_name">ProductosApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user">user</string>
    <string name="nombre">Nombre</string>
    <string name="registrar_nuevo_usuario">Registrar nuevo Usuario:</string>
    <string name="apellido">Apellido</string>
    <string name="usuario">Usuario</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>